# block-ciphers

./: .gitignore  .travis.yml  .typos.toml  Cargo.toml  README.md  build_nostd.sh  rustfmt.toml  tea.yaml  test_aes.sh
aes/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
aes-soft/: Cargo.toml
aes-soft/benches/: aes128.rs  aes192.rs  aes256.rs
aes-soft/src/: bitslice.rs  consts.rs  expand.rs  impls.rs  lib.rs  simd.rs
aes/aes/: Cargo.toml
aes/aes-soft/: CHANGELOG.md  Cargo.toml
aes/aes-soft/benches/: aes128.rs  aes192.rs  aes256.rs
aes/aes-soft/src/: bitslice.rs  consts.rs  expand.rs  fixslice.rs  fixslice32.rs  fixslice64.rs  impls.rs  lib.rs  simd.rs
aes/aes-soft/tests/: lib.rs
aes/aes/benches/: aes256.rs
aes/aes/src/: lib.rs
aes/aes/tests/: lib.rs
aes/aesni/: CHANGELOG.md  Cargo.toml
aes/aesni/benches/: aes128.rs  aes128_ctr.rs  aes192.rs  aes192_ctr.rs  aes256.rs  aes256_ctr.rs
aes/aesni/src/: aes128.rs  aes192.rs  aes256.rs  ctr.rs  lib.rs  target_checks.rs  utils.rs
aes/aesni/tests/: ctr.rs  lib.rs  mod.rs
aes/benches/: aes128.rs  aes192.rs  aes256.rs  mod.rs
aes/src/: armv8.rs  armv9.rs  autodetect.rs  hazmat.rs  lib.rs  macros.rs  ni.rs  riscv.rs  riscv64.rs  round.rs  soft.rs  weak_key.rs  x86.rs
aes/src/armv8/: decrypt.rs  encdec.rs  encrypt.rs  expand.rs  hazmat.rs  intrinsics.rs  round.rs  test_expand.rs
aes/src/armv9/: encdec.rs  expand.rs  test_expand.rs
aes/src/ni/: aes128.rs  aes192.rs  aes256.rs  ctr.rs  encdec.rs  (+5 more)
aes/tests/: ctr.rs  hazmat.rs  lib.rs  mod.rs  round.rs  weak.rs
aesni/: Cargo.toml
aesni/benches/: aes128.rs  aes192.rs  aes192_ctr.rs  aes256.rs
aesni/src/: ctr.rs  impl_traits.rs  lib.rs  target_checks.rs  u64x2.rs  utils.rs
aesni/tests/: ctr.rs  lib.rs  mod.rs
aria/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
aria/benches/: mod.rs
aria/src/: aria128.rs  aria192.rs  aria256.rs  consts.rs  lib.rs  utils.rs
aria/tests/: mod.rs
belt-block/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
belt-block/benches/: mod.rs
belt-block/src/: block.rs  cipher_impl.rs  consts.rs  lib.rs
belt-block/tests/: mod.rs
block-modes/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
block-modes/src/: cbc.rs  cfb.rs  cfb8.rs  ctr.rs  ctr128.rs  ctr64.rs  ecb.rs  errors.rs  ige.rs  lib.rs  ofb.rs  paddings.rs  pcbc.rs  tools.rs  traits.rs  utils.rs  xts.rs
block-modes/tests/: lib.rs
blowfish/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
blowfish/benches/: lib.rs  mod.rs
blowfish/src/: consts.rs  lib.rs
blowfish/tests/: lib.rs  mod.rs
camellia/: CHANGELOG.md  Cargo.toml  README.md
camellia/benches/: mod.rs
camellia/src/: camellia.rs  camellia128.rs  camellia192.rs  camellia256.rs  consts.rs  lib.rs  utils.rs
camellia/tests/: mod.rs
cast5/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
cast5/benches/: lib.rs  mod.rs
cast5/src/: cast5.rs  consts.rs  lib.rs  schedule.rs
cast5/tests/: lib.rs  mod.rs
cast6/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
cast6/benches/: mod.rs
cast6/src/: consts.rs  lib.rs
cast6/tests/: mod.rs
des/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
des/benches/: des.rs  lib.rs  mod.rs  tdes.rs
des/src/: consts.rs  des.rs  lib.rs  tdes.rs  utils.rs  weak_key.rs
des/tests/: lib.rs  mod.rs  weak.rs
gift/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
gift/benches/: gift128enc.rs
gift/src/: consts.rs  gift.rs  key_schedule.rs  lib.rs  primitives.rs
gift/tests/: mod.rs  test.rs
gost-modes/: CHANGELOG.md  Cargo.toml  README.md
gost-modes/src/: cbc.rs  cfb.rs  ctr.rs  ctr128.rs  ctr64.rs  errors.rs  lib.rs  ofb.rs  utils.rs
gost-modes/tests/: lib.rs
hctr/: Cargo.toml  LICENSE-MIT
hctr/benches/: hctr.rs
hctr/src/: lib.rs
hight/: Cargo.toml  LICENSE-MIT  README.md
hight/src/: consts.rs  dec.rs  enc.rs  hight.rs  key_schedule.rs  lib.rs  main.rs  primitives.rs
hight/tests/: mod.rs
idea/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
idea/benches/: lib.rs  mod.rs
idea/src/: lib.rs  tests.rs
idea/tests/: data.rs  lib.rs  mod.rs
kuznyechik/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
kuznyechik/benches/: lib.rs  mod.rs
kuznyechik/src/: consts.rs  expand_key.rs  fused_tables.rs  gft.rs  lib.rs  macros.rs  utils.rs
kuznyechik/tests/: lib.rs  mod.rs
magma/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
magma/benches/: lib.rs  mod.rs
magma/src/: construct.rs  gen_table.rs  lib.rs  sboxes.rs  sboxes_exp.rs
magma/tests/: lib.rs
rc2/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
rc2/benches/: lib.rs  mod.rs
rc2/src/: consts.rs  lib.rs
rc2/tests/: lib.rs  mod.rs  test_vectors.rs
rc5/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
rc5/benches/: mod.rs
rc5/src/: block_cipher.rs  lib.rs  primitives.rs
rc5/tests/: mod.rs
rc6/: CHANGELOG.md  Cargo.toml  README.md
rc6/src/: block_cipher.rs  lib.rs
rc6/tests/: mod.rs
serpent/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
serpent/benches/: lib.rs  mod.rs  serpent.rs
serpent/src/: bitslice.rs  consts.rs  lib.rs  unroll.rs
serpent/tests/: lib.rs  mod.rs
simon/: Cargo.toml  LICENSE-MIT  README.md
simon/src/: lib.rs
simon/tests/: mod.rs
sm4/: CHANGELOG.md  Cargo.toml  README.md
sm4/benches/: lib.rs  mod.rs
sm4/src/: consts.rs  lib.rs  sm4.rs  soft.rs
sm4/tests/: lib.rs  mod.rs
speck/: CHANGELOG.md  Cargo.toml  README.md
speck-cipher/: CHANGELOG.md  Cargo.toml  README.md
speck-cipher/src/: lib.rs
speck/src/: lib.rs
speck/tests/: mod.rs
threefish/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
threefish/benches/: lib.rs  mod.rs
threefish/src/: consts.rs  lib.rs
threefish/tests/: mod.rs
twofish/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
twofish/benches/: lib.rs  mod.rs
twofish/src/: consts.rs  lib.rs  tests.rs
twofish/tests/: lib.rs  mod.rs
xtea/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
xtea/benches/: mod.rs
xtea/src/: consts.rs  lib.rs
xtea/tests/: mod.rs
(+210 files in other folders)
