[workspace]
resolver = "3"
members = [
    "aes",
    "aria",
    "belt-block",
    "blowfish",
    "camellia",
    "cast5",
    "cast6",
    "des",
    "gift",
    "idea",
    "kuznyechik",
    "magma",
    "rc2",
    "rc5",
    "serpent",
    "sm4",
    "speck",
    "twofish",
    "threefish",
    "xtea",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
# https://github.com/RustCrypto/traits/pull/1998
cipher = { git = "https://github.com/RustCrypto/traits" }
# https://github.com/RustCrypto/utils/pull/1187
# https://github.com/RustCrypto/utils/pull/1207
blobby = { git = "https://github.com/RustCrypto/utils" }
