[workspace]
resolver = "3"
members = [
    "aes",
    "aria",
    "belt-block",
    "blowfish",
    "camellia",
    "cast5",
    "cast6",
    "des",
    "gift",
    "idea",
    "kuznyechik",
    "magma",
    "rc2",
    "rc5",
    "rc6",
    "serpent",
    "sm4",
    "speck",
    "twofish",
    "threefish",
    "xtea",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
crypto-common = { git = "https://github.com/RustCrypto/traits", branch = "block_sizes" }
cipher = { git = "https://github.com/RustCrypto/traits", branch = "block_sizes" }
