[workspace]
resolver = "3"
members = [
    "aes",
    "aria",
    "belt-block",
    "blowfish",
    "camellia",
    "cast5",
    "cast6",
    "des",
    "gift-cipher",
    "idea",
    "kuznyechik",
    "magma",
    "rc2",
    "rc5",
    "rc6",
    "serpent",
    "simon-cipher",
    "sm4",
    "speck-cipher",
    "twofish",
    "threefish",
    "xtea",
]

[profile.dev]
opt-level = 2
