[package]
name = "aes-soft"
version = "0.1.0"
authors = ["RustCrypto Developers"]
license = "MIT/Apache-2.0"
description = "AES (Rijndael) block ciphers bit-sliced implementation"
documentation = "https://docs.rs/aes-soft"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "aes", "rijndael", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
block-cipher-trait = "0.5"
opaque-debug = "0.1"
byte-tools = "0.2"

[dev-dependencies]
block-cipher-trait = { version = "0.5", features = ["dev"] }
