[package]
name = "aes"
version = "0.9.0-pre.2"
description = "Pure Rust implementation of the Advanced Encryption Standard (a.k.a. Rijndael)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.72"
readme = "README.md"
documentation = "https://docs.rs/aes"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "aes", "rijndael", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cfg-if = "1"
cipher = "=0.5.0-pre.7"
zeroize = { version = "1.5.6", optional = true, default-features = false, features = [
    "aarch64",
] }

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
cipher = { version = "=0.5.0-pre.7", features = ["dev"] }
hex-literal = "0.4"

[features]
hazmat = [] # Expose cryptographically hazardous APIs

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(aes_compact)", "cfg(aes_force_soft)"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
