[package]
name = "aesni"
version = "0.3.3"
authors = ["RustCrypto Developers"]
license = "MIT/Apache-2.0"
description = "AES (Rijndael) block ciphers implementation using AES-NI"
documentation = "https://docs.rs/aesni"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "aes", "rijndael", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
block-cipher-trait = "0.5"
opaque-debug = "0.1"

[dev-dependencies]
block-cipher-trait = { version = "0.5", features = ["dev"] }

[workspace]

[package.metadata.docs.rs]
rustc-args = ["-C target-feature=+aes"]
rustdoc-args = ["-C target-feature=+aes"]
