[package]
name = "aria"
version = "0.1.0"
description = "Pure Rust implementation of the ARIA Encryption Algorithm"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/aria"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "aria", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.4.2"

[dev-dependencies]
cipher = { version = "0.4.2", features = ["dev"] }
hex-literal = "0.3"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
