[package]
name = "belt-block"
version = "0.2.0-pre.2"
description = "belt-block block cipher implementation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
rust-version = "1.65"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/belt-block"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "belt-block", "belt", "stb"]

[dependencies]
cipher = { version = "=0.5.0-pre.7", optional = true }

[dev-dependencies]
cipher = { version = "=0.5.0-pre.7", features = ["dev"] }
hex-literal = "0.4"

[features]
default = ["cipher"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
