[package]
name = "belt-block"
version = "0.2.0-pre.2"
description = "belt-block block cipher implementation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
rust-version = "1.85"
edition = "2024"
readme = "README.md"
documentation = "https://docs.rs/belt-block"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "belt-block", "belt", "stb"]

[dependencies]
cipher = { version = "=0.5.0-pre.8", optional = true }

[dev-dependencies]
cipher = { version = "=0.5.0-pre.8", features = ["dev"] }
hex-literal = "1"

[features]
default = ["cipher"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
