[package]
name = "block-modes"
version = "0.8.0-pre"
description = "Block cipher modes of operation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/block-modes"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "block-cipher", "ciphers"]

[dependencies]
cipher = { git = "https://github.com/RustCrypto/traits", branch = "experimental_design" }

[dev-dependencies]
aes = { version = "=0.7.0-pre", path = "../aes", features = ["force-soft"] }
#hex-literal = "0.2"

[features]
default = ["std"]
alloc = []
std = ["alloc"]
