[package]
name = "blowfish"
version = "0.9.1" # Also update html_root_url in lib.rs when bumping this
description = "Blowfish block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/blowfish"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "blowfish", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.4.2"
byteorder = { version = "1.1", default-features = false }

[dev-dependencies]
cipher = { version = "0.4.2", features = ["dev"] }

[features]
bcrypt = []
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
