[package]
name = "blowfish"
version = "0.10.0-rc.1"
description = "Blowfish block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/blowfish"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "blowfish", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.5.0-rc.1"
byteorder = { version = "1.1", default-features = false }

[dev-dependencies]
cipher = { version = "0.5.0-rc.1", features = ["dev"] }

[features]
bcrypt = []
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
