[package]
name = "camellia"
version = "0.2.0-pre"
description = "Camellia block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"
readme = "README.md"
documentation = "https://docs.rs/camellia"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "camellia", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
byteorder = { version = "1.1", default-features = false }
cipher = "=0.5.0-pre.7"

[dev-dependencies]
cipher = { version = "=0.5.0-pre.7", features = ["dev"] }

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
