[package]
name = "camellia"
version = "0.2.0-pre"
description = "Camellia block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/camellia"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "camellia", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
byteorder = { version = "1.1", default-features = false }
cipher = "0.5.0-rc.1"

[dev-dependencies]
cipher = { version = "0.5.0-rc.1", features = ["dev"] }

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
