[package]
name = "cast5"
version = "0.12.0-pre"
description = "CAST5 block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/cast5"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "cast5", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.5.0-pre.8"

[dev-dependencies]
cipher = { version = "=0.5.0-pre.8", features = ["dev"] }
hex-literal = "1"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
