[package]
name = "cast6"
version = "0.2.0-pre"
description = "CAST6 block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/cast6"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "cast6", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.5.0-rc.1"

[dev-dependencies]
cipher = { version = "0.5.0-rc.1", features = ["dev"] }
hex-literal = "1"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
