[package]
name = "des"
version = "0.7.0-pre"
description = "DES and Triple DES (3DES, TDES) block ciphers implementation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/des"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "des", "tdes", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.3.0-pre.3"
byteorder = { version = "1", default-features = false }
opaque-debug = "0.3"

[dev-dependencies]
cipher = { version = "=0.3.0-pre.3", features = ["dev"] }
