[package]
name = "des"
version = "0.9.0-pre.2"
description = "DES and Triple DES (3DES, TDES) block ciphers implementation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"
readme = "README.md"
documentation = "https://docs.rs/des"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "des", "tdes", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.5.0-pre.7"

[dev-dependencies]
cipher = { version = "=0.5.0-pre.7", features = ["dev"] }

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
