[package]
name = "des"
version = "0.9.0-rc.1"
description = "DES and Triple DES (3DES, TDES) block ciphers implementation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/des"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "des", "tdes", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.5.0-rc.1"

[dev-dependencies]
cipher = { version = "0.5.0-rc.1", features = ["dev"] }
hex-literal = "1"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
