[package]
name = "gift-cipher"
version = "0.0.0"
description = "Gift block cipher"
authors = ["RustCrypto Developers", "Schmid7k"]
license = "MIT OR Apache-2.0"
rust-version = "1.65"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/gift-cipher"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "gift", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.5.0-pre.6"

[dev-dependencies]
cipher = { version = "=0.5.0-pre.6", features = ["dev"] }

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
