[package]
name = "gift-cipher"
version = "0.0.1-rc.1"
description = "Pure Rust implementation of the Gift block cipher"
authors = ["RustCrypto Developers", "Schmid7k"]
license = "MIT OR Apache-2.0"
rust-version = "1.85"
edition = "2024"
readme = "README.md"
documentation = "https://docs.rs/gift-cipher"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "gift", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.5.0-rc.1"

[dev-dependencies]
cipher = { version = "0.5.0-rc.1", features = ["dev"] }
hex-literal = "1"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
