[package]
name = "gost-modes"
version = "0.4.0-pre"
description = "Block cipher modes of operation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/block-modes"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "block-cipher", "ciphers"]

[dependencies]
block-modes = { version = "=0.7.0-pre", path = "../block-modes", default-features = false }
cipher = { version = "0.2", default-features = false }
generic-array = "0.14"

[dev-dependencies]
kuznyechik = { version = "0.6.0-pre", path = "../kuznyechik" }
magma = { version = "0.6.0-pre", path = "../magma" }
cipher = { version = "0.2", features = ["dev"] }
hex-literal = "0.2"

[features]
default = ["std"]
alloc = ["block-modes/alloc"]
std = ["alloc", "block-modes/std", "cipher/std"]
