[package]
name = "hight"
version = "0.1.0"
edition = "2021"
description = "HIGHT - Block Cipher Suitable for Low-Resource Device"
authors = ["Arul Sujith S"]
license = "MIT OR Apache-2.0"
rust-version = "1.80"
readme = "README.md"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "hight", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
hex-literal = "0.3"

