[package]
name = "idea"
version = "0.5.1"
description = "IDEA block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/idea"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "idea", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.4.2"

[dev-dependencies]
cipher = { version = "0.4.2", features = ["dev"] }

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
