[package]
name = "kuznyechik"
version = "0.7.2"
description = "Kuznyechik (GOST R 34.12-2015) block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/kuznyechik"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "kuznyechik", "gost", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.3"

[dev-dependencies]
cipher = { version = "0.3", features = ["dev"] }
hex-literal = "0.2"

[features]
# disables loop unrolling, which reduces resulting binary size,
# but may degrade performance in return
no_unroll = []
# force software implementation which uses smaller tables
force-soft = []
