[package]
name = "kuznyechik"
version = "0.9.0-pre.2"
description = "Kuznyechik (GOST R 34.12-2015) block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81"
readme = "README.md"
documentation = "https://docs.rs/kuznyechik"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "kuznyechik", "gost", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.5.0-pre.7"
cfg-if = "1"

[dev-dependencies]
cipher = { version = "=0.5.0-pre.7", features = ["dev"] }
hex-literal = "0.4"

[features]
zeroize = ["cipher/zeroize"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(kuznyechik_backend, values("soft", "compact_soft"))']

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
