[package]
name = "kuznyechik"
version = "0.9.0-rc.1"
description = "Kuznyechik (GOST R 34.12-2015) block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/kuznyechik"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "kuznyechik", "gost", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.5.0-rc.1"
cfg-if = "1"

[dev-dependencies]
cipher = { version = "0.5.0-rc.1", features = ["dev"] }
hex-literal = "1"

[features]
zeroize = ["cipher/zeroize"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(kuznyechik_backend, values("soft", "compact_soft"))']

[package.metadata.docs.rs]
all-features = true
