[package]
name = "magma"
version = "0.8.1"
description = "Magma (GOST R 34.12-2015) block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/magma"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "magma", "gost", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.4.2"

[dev-dependencies]
cipher = { version = "0.4.2", features = ["dev"] }
hex-literal = "0.3.3"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
