[package]
name = "magma"
version = "0.10.0-pre.2"
description = "Magma (GOST R 34.12-2015) block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"
readme = "README.md"
documentation = "https://docs.rs/magma"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "magma", "gost", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.5.0-pre.7"

[dev-dependencies]
cipher = { version = "=0.5.0-pre.7", features = ["dev"] }
hex-literal = "0.4"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
