[package]
name = "rc2"
version = "0.7.0-pre"
description = "RC2 block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/rc2"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "rc2", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.3.0-pre"
opaque-debug = "0.3"

[dev-dependencies]
cipher = { version = "=0.3.0-pre", features = ["dev"] }
