[package]
name = "rc2"
version = "0.8.1"
description = "RC2 block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/rc2"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "rc2", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.4.2"

[dev-dependencies]
cipher = { version = "0.4.2", features = ["dev"] }

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
