[package]
name = "rc5"
version = "0.1.0-pre"
description = "RC5 block cipher"
authors = ["RustCrypto Developers"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.65"
readme = "README.md"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "rc5", "block-cipher"]
categories = ["cryptography"]

[dependencies]
cipher = "=0.5.0-pre.7"

[dev-dependencies]
cipher = { version = "=0.5.0-pre.7", features = ["dev"] }
hex-literal = "0.4"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
