[package]
name = "rc6"
version = "0.1.0"
description = "RC6 block cipher"
authors = ["RustCrypto Developers"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "rc6", "block-cipher"]
categories = ["cryptography"]

[dependencies]
cipher = { version = "0.4.3", features = ["zeroize"] }

[dev-dependencies]
cipher = { version = "0.4.3", features = ["dev"] }
rand = { version = "0.8.5" }

[features]
zeroize = []
