[package]
name = "rc6"
version = "0.0.0"
description = "RC6 block cipher"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "rc6", "block-cipher"]
categories = ["cryptography"]

[dependencies]
cipher = { version = "0.5.0-rc.1", features = ["zeroize"] }

[dev-dependencies]
cipher = { version = "0.5.0-rc.1", features = ["dev"] }

[features]
zeroize = []
