[package]
name = "serpent"
version = "0.6.0-pre"
description = "Serpent block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"
readme = "README.md"
documentation = "https://docs.rs/serpent"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "serpent", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.5.0-pre.7"

[dev-dependencies]
cipher = { version = "=0.5.0-pre.7", features = ["dev"] }

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
